feat: update solutions to lc problems: No.0762,0763
* No.0762.Prime Number of Set Bits in Binary Representation
* No.0763.Partition Labels