@@ -1,5 +1,5 @@
 class Solution {
-    private static Set<Integer> primes = new HashSet<>(Arrays.asList(2, 3, 5, 7, 11, 13, 17, 19));
+    private static Set<Integer> primes = Set.of(2, 3, 5, 7, 11, 13, 17, 19);
 
     public int countPrimeSetBits(int left, int right) {
         int ans = 0;
